--- a/Finalest-ERP/Dockerfile
+++ b/Finalest-ERP/Dockerfile
@@ -1,22 +1,6 @@
-FROM google/debian:wheezy
-
-# 安装基础工具
-RUN apt-get update -y && apt-get install --no-install-recommends -y -q curl python build-essential git ca-certificates
-
-RUN mkdir /nodejs && curl http://nodejs.org/dist/v0.10.30/node-v0.10.30-linux-x64.tar.gz | tar xvzf - -C /nodejs --strip-components=1
-
-# 安装 NPM
-RUN apt-get install npm
-
-# 安装 Vue 和 Cli
-RUN npm install vue && \
-	npm install --global vue-cli
-
-# 将 NodeJs 添加到环境变量
-ENV PATH $PATH:/nodejs/bin
-
-WORKDIR /opt/web
+FROM node:8.10
+EXPOSE 5000
+WORKDIR /home/node/app
 COPY ./ .
-
-RUN npm install
-ENTRYPOINT ["npm","build"]
+RUN npm install --no-optional
+CMD ["npm","start"]
